change image directory

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
             <div class="col-2">
-                <img src="../img/bg/homebg.svg" alt="">
+                <img src="img/bg/homebg.svg" alt="">
                 <div class="home-text">
                     <h6>Best Offer</h6>
                     <h1>Explore The Everest Mountain</h1>
@@ -37,7 +37,7 @@
         <!-- --------layanan----------- -->
         <div class="col-4">
             <div class="content">
-                <img src="../img/icon/plane.png" alt="">
+                <img src="img/icon/plane.png" alt="">
                 <div class="text-content">
                     <h2>Fast Travel</h2>
                     <p>with our company your travel
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="../img/icon/wallet.png" alt="">
+                <img src="img/icon/wallet.png" alt="">
                 <div class="text-content">
                     <h2>Reliable</h2>
                     <p>with our company your travel
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="../img/icon/call-history.png" alt="">
+                <img src="img/icon/call-history.png" alt="">
                 <div class="text-content">
                     <h2>Support Assist</h2>
                     <p>with our company your travel
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="../img/icon/doctor.png" alt="">
+                <img src="img/icon/doctor.png" alt="">
                 <div class="text-content">
                     <h2>Health Friendly</h2>
                     <p>with our company your travel
@@ -84,7 +84,7 @@
         </div>
         <div class="col-product">
             <div class="row-product">
-                <img src="../img/bg/country.svg" alt="">
+                <img src="img/bg/country.svg" alt="">
                 <div class="product-link">
                     <ul class="li"><a href="">walk</a></ul>
                     <ul class="li"><a href="">learning</a></ul>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="row-product">
-                <img src="../img/bg/explore.svg" alt="">
+                <img src="img/bg/explore.svg" alt="">
                 <div class="product-link">
                     <ul class="li"><a href="">walk</a></ul>
                     <ul class="li"><a href="">learning</a></ul>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="row-product">
-                <img src="../img/bg/nature.svg" alt="">
+                <img src="img/bg/nature.svg" alt="">
                 <div class="product-link">
                     <ul class="li"><a href="">walk</a></ul>
                     <ul class="li"><a href="">learning</a></ul>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="row-product">
-                <img src="../img/bg/outdoor.svg" alt="">
+                <img src="img/bg/outdoor.svg" alt="">
                 <div class="product-link">
                     <ul class="li"><a href="">walk</a></ul>
                     <ul class="li"><a href="">learning</a></ul>
@@ -181,7 +181,7 @@
         <div class="container-grid-4">
             <div class="product-grid-4 grid4-1">
                 <div class="product-image">
-                    <img src="../img/bg/undraw_off_road_re_leme.svg" alt="">
+                    <img src="img/bg/undraw_off_road_re_leme.svg" alt="">
                     <h1>Perfect Product</h1>
                 </div>
                 <div class="product-price">
@@ -191,13 +191,13 @@
                         </div>
                     </div>
                     <div class="icon">
-                        <img src="../img/icon/send.png" alt="share">
+                        <img src="img/icon/send.png" alt="share">
                     </div>
                 </div>
             </div>
             <div class="product-grid-4 grid4-1">
                 <div class="product-image">
-                    <img src="../img/bg/undraw_pie_graph_re_fvol.svg" alt="">
+                    <img src="img/bg/undraw_pie_graph_re_fvol.svg" alt="">
                     <h1>Easy Remote</h1>
                 </div>
                 <div class="product-price">
@@ -207,13 +207,13 @@
                         </div>
                     </div>
                     <div class="icon">
-                        <img src="../img/icon/send.png" alt="share">
+                        <img src="img/icon/send.png" alt="share">
                     </div>
                 </div>
             </div>
             <div class="product-grid-4 grid4-1">
                 <div class="product-image">
-                    <img src="../img/bg/undraw_relaxation_re_ohkx.svg" alt="">
+                    <img src="img/bg/undraw_relaxation_re_ohkx.svg" alt="">
                     <h1>Just Chillin With Ur Gf</h1>
                 </div>
                 <div class="product-price">
@@ -223,13 +223,13 @@
                         </div>
                     </div>
                     <div class="icon">
-                        <img src="../img/icon/send.png" alt="share">
+                        <img src="img/icon/send.png" alt="share">
                     </div>
                 </div>
             </div>
             <div class="product-grid-4 grid4-1">
                 <div class="product-image">
-                    <img src="../img/bg/undraw_result_re_uj08.svg" alt="">
+                    <img src="img/bg/undraw_result_re_uj08.svg" alt="">
                     <h1>See Your Project</h1>
                 </div>
                 <div class="product-price">
@@ -239,7 +239,7 @@
                         </div>
                     </div>
                     <div class="icon">
-                        <img src="../img/icon/send.png" alt="share">
+                        <img src="img/icon/send.png" alt="share">
                     </div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                 </ul>
             </div>
             <div class="image-special">
-                <img src="../img/bg/iphone-removebg-preview.png" alt="">
+                <img src="img/bg/iphone-removebg-preview.png" alt="">
                 <div class="discount-value">
                 </div>
             </div>
@@ -370,16 +370,16 @@
         </div>
         <div class="social-media">
             <ul>
-                <li><a href="https://facebook.com" target="_blank"><img src="../img/icon/facebook.png" alt="facebook" width="20px" height="20px"></a></li>
-                <li><a href="https://instagram.com"target="_blank"><img src="../img/icon/instagram.png" alt="instagram" width="20px" height="20px"></a></li>
-                <li><a href="https://github.com"target="_blank"><img src="../img/icon/github.png" alt="github" width="20px" height="20px"></a></li>
+                <li><a href="https://facebook.com" target="_blank"><img src="img/icon/facebook.png" alt="facebook" width="20px" height="20px"></a></li>
+                <li><a href="https://instagram.com"target="_blank"><img src="img/icon/instagram.png" alt="instagram" width="20px" height="20px"></a></li>
+                <li><a href="https://github.com"target="_blank"><img src="img/icon/github.png" alt="github" width="20px" height="20px"></a></li>
             </ul>          
         </div>
         <div class="share-follow">
             <ul>
-                <li><a href="https://facebook.com"target="_blank"><img src="../img/icon/add-friend.png" alt="facebook" width="20px" height="20px"></a></li>
-                <li><a href="https://instagram.com"target="_blank"><img src="../img/icon/heart.png" alt="instagram" width="20px" height="20px"></a></li>
-                <li><a href="https://github.com"target="_blank"><img src="../img/icon/send.png" alt="github" width="20px" height="20px"></a></li>
+                <li><a href="https://facebook.com"target="_blank"><img src="img/icon/add-friend.png" alt="facebook" width="20px" height="20px"></a></li>
+                <li><a href="https://instagram.com"target="_blank"><img src="img/icon/heart.png" alt="instagram" width="20px" height="20px"></a></li>
+                <li><a href="https://github.com"target="_blank"><img src="img/icon/send.png" alt="github" width="20px" height="20px"></a></li>
             </ul> 
     </footer>
     <script src="script.js"></script>
